--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&family=Montserrat:wght@300;400;700&display=swap');
 
 :root {
-  --golden: rgb(255, 201, 106);
+  --golden: rgb(209, 159, 72);
   --light-grey: rgb(242, 242, 242);
   --dark-grey: rgb(38, 38, 38);
-  --section-height: 80px;
+  --section-height: 82px;
 }
 
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -23,6 +24,20 @@ html {
 body {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
+}
+
+.dark {
+  color: var(--dark-grey);
+}
+
+.golden {
+  color: var(--golden);
+}
+
+.cursive {
+  font-family: 'Herr Von Muellerhoff', cursive;
+  font-size: 8rem;
+  color: var(--golden);
 }
 
 #content {
@@ -63,10 +78,24 @@ main {
   text-align: center;
 }
 
-.cursive {
-  font-family: 'Herr Von Muellerhoff', cursive;
-  font-size: 8rem;
-  color: var(--golden);
+article {
+  max-width: 490px;
+}
+
+#menu,
+#about {
+  background: var(--light-grey);
+  height: calc(100vh - var(--section-height) * 2);
+  overflow: auto;
+  padding: 0 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about-text {
+  white-space: pre-line;
+  max-width: 620px;
 }
 
 h1 {
@@ -76,10 +105,18 @@ h1 {
   margin-top: -88px;
 }
 
+h2 {
+  margin: 8px;
+}
+
 hr {
-  width: 280px;
+  width: 284px;
   border: 2px solid var(--golden);
   margin: 24px auto;
+}
+
+article hr {
+  border: 1px solid var(--golden);
 }
 
 .description {
@@ -112,10 +149,79 @@ footer {
 }
 
 footer p {
-  /* font-size: 14px; */
   color: white;
 }
 
 footer a {
   display: flex;
+}
+
+@media only screen and (max-width: 560px) {
+  :root {
+    --section-height: 55px;
+  }
+
+  .cursive {
+    font-size: 6.6rem;
+  }
+
+  h1 {
+    font-size: 3rem;
+    margin-top: -68px;
+  }
+
+  h2 {
+    font-size: 1.3rem;
+  }
+
+  p {
+    font-size: 0.9rem;
+  }
+}
+
+@media only screen and (max-width: 408px) {
+  :root {
+    --section-height: 50px;
+  }
+
+  .cursive {
+    font-size: 6rem;
+  }
+
+  h1 {
+    font-size: 2.6rem;
+    margin-top: -63px;
+  }
+
+  h2 {
+    font-size: 1.3rem;
+  }
+
+  p {
+    font-size: 0.9rem;
+  }
+
+  footer p {
+    font-size: 13px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  :root {
+    --section-height: 50px;
+  }
+
+  .cursive {
+    font-size: 5rem;
+  }
+
+  h1 {
+    font-size: 2.2rem;
+    margin-top: -51px;
+  }
+
+  button {
+    font-size: 0.85rem;
+    padding: 14px;
+  }
 }
